# PetyaDiplom

./: package-lock.json  package.json
backend/: main.py  pyproject.toml
backend/app/: app.py  client.py  connection_manager.py
backend/app/api/api_v1/handlers/: todo.py  user.py
backend/app/api/auth/: jwt.py
backend/app/connection_managers/: __init__.py  base.py  container.py  todo_details.py  todo_room.py  user_todos.py
backend/app/core/: config.py  security.py
backend/app/models/: base.py  todo_model.py  user_model.py
backend/app/schemas/: todo_schema.py  todo_schemas.py  user_schema.py  user_schemas.py
backend/app/services/: todo_service.py  user_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/components/Auth/: Login.jsx  Register.jsx
frontend/src/components/Editorjs/: Configuration.jsx  EditorJS.jsx  SimpleImage.js  style.module.css
frontend/src/components/MardownEditor/: MardownEditor.jsx
frontend/src/components/Navbar/: NavBar.jsx
frontend/src/components/NovelEditor/: NovelEditor.jsx
frontend/src/components/SocketComponent/: SocketComponent.jsx
frontend/src/components/Theme/: ThemeToggler.jsx
frontend/src/components/TipTap/: Edit.css  TipTap.jsx
frontend/src/components/Todo/: AddToGroupModal.jsx  AddUpdateTodoModal.jsx  OtherTodo.jsx  TodoCard.jsx  TodoDetail.jsx  TodoList.jsx  (+1 more)
frontend/src/context/: IsMobileContext.jsx  JWTAuthContext.jsx  TodoIsOpenContext.jsx
frontend/src/pages/: InvitePage.jsx  MainPage.jsx
frontend/src/utils/: apiFunctions.js  jwt.js  session.js
(+3 files in other folders)
