[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "0.26.0"
fastapi = "0.109.0"
pip = "^24.0"
pyjwt = "^2.8.0"
motor = "^3.3.2"
taskipy = "^1.12.2"
beanie = "1.24.0"
pymongo = "4.6.1"
pydantic-settings = "^2.2.1"
python-decouple = "^3.8"
pydantic = {extras = ["email"], version = "^2.7.2"}
passlib = "^1.7.4"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
start = { cmd = "python -m main", help = "run the bot" }
